@@ -3,6 +3,7 @@ Revision history for Perl module Nagios::Plugin.
 0.34 15th April 2010
   - Amended standard --extra-opts help
   - pod fix (Frank Wiegand - RT51872)
+  - Added %STATUS_TEXT to valid possible exports (Andrew Ford - RT46048)
 
 0.33 5th June 2009
   - Fixed infinite loop when invalid performance data with multiple = were present
